kubernetes/apps/default/misc-ingress/app/ingress-external-docs.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: docspell.png
    gethomepage.dev/name: Docspell
    gethomepage.dev/group: Office
    gethomepage.dev/description: Document Management
spec:
  ingressClassName: external
  rules:
    - host: &host "docs.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs
                port:
                  number: 7880
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: docs
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 7880
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: docs
spec:
  ports:
    - name: http
      port: 7880
  type: ClusterIP
